--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ html { box-sizing: border-box; }
 body {
     background-color:#b2bec3;
     font-family: 'Nunito', sans-serif;
+    margin: 0;
+    
 }
 
 img {
@@ -11,6 +13,10 @@ img {
     height: 150px;
     border-radius: 50%;
     border: 3px solid white;
+    position: absolute;
+    top: -75px;
+    right: -75px;
+    box-shadow: 5px 5px 5px gray;
     }
 
 .box {
@@ -18,13 +24,18 @@ img {
     width: 550px;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 150px;
     padding-left: 30px;
     padding-right: 30px;
+    padding-bottom: 30px;
     border-radius: 10px;
+    box-shadow: 5px 5px 5px gray;
+    position: relative;
     }
 
 h1 {
     color: #d63031;
+    line-height: 36px;
     font-size: 36px;
     font-weight: bold;
     margin-top: 0px;
@@ -36,8 +47,39 @@ h1 {
 p {
     margin-top: 30px;
     margin-bottom: 30px;
+    font-size: 18px;
 }
 
+a {
+    display: block;
+    font-size: 18px;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-decoration: none;
+    text-align: center;
+    color: white;
+    border-radius: 5px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+.twitter {
+    background-color: #1da1f2;
+    margin-top: 30px;
+
+}
+
+.facebook {
+    background-color: #3b5998;
+    margin-top: 10px;
+}
+
+.twitter:hover {
+    background-color: #0b7bc1;
+}
+
+.facebook:hover {
+    background-color: #2b406e;
+}
 /*
 BARVY:
 šedá na pozadí stránky:		 #b2bec3
